--- a/pom.xml
+++ b/pom.xml
@@ -92,5 +92,10 @@
 	    <artifactId>jsoup</artifactId>
 	    <version>1.8.3</version>
 	</dependency>
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20150729</version>
+	</dependency>		
   </dependencies>
 </project>
